# vvv

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: vvv-config.cmake.in
include/: vvv.h  vvv_window.h
include/details/: vvv_base.h  vvv_error_handling.h  vvv_hash.h  vvv_raw.h
prereq/: CMakeLists.txt  CMakePresets.json  prereq.cmake
src/: vvv.cpp
testing/: CMakeLists.txt  CMakePresets.json  main.cpp
